@@ -1,5 +1,9 @@
 2003-10-17  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/migration.c (process_calendar_dir): process subfolders.
+
+2003-10-17  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/migration.[ch] (migrate_old_calendars): new function.
 
 	* gui/calendar-component.c (calendar_component_init): call
